// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> renders the Table with desc sort 1`] = `
<WithStyles(ForwardRef(TableContainer))>
  <WithStyles(ForwardRef(Table))>
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 110,
              "width": "12%",
            }
          }
        >
          <WithStyles(ForwardRef(TableSortLabel))
            active={true}
            direction="desc"
            onClick={[Function]}
          >
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-tableHeadTypography-1"
              variant="subtitle2"
            >
              Date
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(TableSortLabel))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 310,
              "width": "30%",
            }
          }
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-tableHeadTypography-1"
            variant="subtitle2"
          >
            User ID
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 150,
              "width": "29%",
            }
          }
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-tableHeadTypography-1"
            variant="subtitle2"
          >
            Old Value
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 150,
              "width": "29%",
            }
          }
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-tableHeadTypography-1"
            variant="subtitle2"
          >
            New Value
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))>
      <WithStyles(ForwardRef(TableRow))
        key="0a75a2b3-be64-4aeb-ba4c-8ddb913791ac"
      >
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            2020-02-16
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            0a75a2b3-be64-4aeb-ba4c-8ddb913791ac
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Nick
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Michel
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="8bd0166f-f0c6-48fd-9fcd-a17e76eb1e92"
      >
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            2020-02-15
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            8bd0166f-f0c6-48fd-9fcd-a17e76eb1e92
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Bruce
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Nick
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="e28d290a-a2f2-48c2-9001-ff43884e271b"
      >
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            2020-02-14
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            e28d290a-a2f2-48c2-9001-ff43884e271b
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            John
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Bruce
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
</WithStyles(ForwardRef(TableContainer))>
`;

exports[`<Table /> sorts the Table 1`] = `
<WithStyles(ForwardRef(TableContainer))>
  <WithStyles(ForwardRef(Table))>
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 110,
              "width": "12%",
            }
          }
        >
          <WithStyles(ForwardRef(TableSortLabel))
            active={true}
            direction="asc"
            onClick={[Function]}
          >
            <WithStyles(ForwardRef(Typography))
              className="makeStyles-tableHeadTypography-1"
              variant="subtitle2"
            >
              Date
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(TableSortLabel))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 310,
              "width": "30%",
            }
          }
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-tableHeadTypography-1"
            variant="subtitle2"
          >
            User ID
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 150,
              "width": "29%",
            }
          }
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-tableHeadTypography-1"
            variant="subtitle2"
          >
            Old Value
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          style={
            Object {
              "minWidth": 150,
              "width": "29%",
            }
          }
        >
          <WithStyles(ForwardRef(Typography))
            className="makeStyles-tableHeadTypography-1"
            variant="subtitle2"
          >
            New Value
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))>
      <WithStyles(ForwardRef(TableRow))
        key="e28d290a-a2f2-48c2-9001-ff43884e271b"
      >
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            2020-02-14
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            e28d290a-a2f2-48c2-9001-ff43884e271b
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            John
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Bruce
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="8bd0166f-f0c6-48fd-9fcd-a17e76eb1e92"
      >
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            2020-02-15
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            8bd0166f-f0c6-48fd-9fcd-a17e76eb1e92
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Bruce
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Nick
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        key="0a75a2b3-be64-4aeb-ba4c-8ddb913791ac"
      >
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            2020-02-16
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            0a75a2b3-be64-4aeb-ba4c-8ddb913791ac
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Nick
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(Typography))
            variant="subtitle2"
          >
            Michel
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
</WithStyles(ForwardRef(TableContainer))>
`;
